--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "lucide-react": "^0.553.0",
     "motion": "^12.0.0-alpha.2",
     "multer": "^2.0.2",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
     "prisma": "^6.19.0",
     "react": "19.2.0",
